docs: documentação finalizada e README.me

--- a/capstone_project_udacity.ipynb
+++ b/capstone_project_udacity.ipynb
@@ -79,7 +79,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Marcus\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "# importação do pandas para trabalhar com calcúlos no modelo\n",
     "import numpy as np\n",
@@ -169,11 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-70bc0cb656ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Fazer a leitura do dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdata_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'license_plates_acution_data.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Fazer a leitura do dataset\n",
     "data_test = pd.read_csv('license_plates_acution_data.csv')"
@@ -3753,7 +3772,9 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictions = logmodel.predict(X_test)"
@@ -4040,7 +4061,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grid_predictions = grid.predict(X_test)"
@@ -4563,7 +4586,9 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# NOW WITH K=30\n",
@@ -6195,7 +6220,9 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from statsmodels.tsa.stattools import adfuller\n",
@@ -7051,7 +7078,9 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "preco = data[\"lowest_deal_price\"]"
@@ -7060,7 +7089,9 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "decomposition = sm.tsa.seasonal_decompose(preco, model='multiplicative')"
@@ -7224,7 +7255,9 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "preco_log = np.log10(preco)\n",
